--- a/q/187510.html
+++ b/q/187510.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>1785</td><td>Nibbles</td><td>221108T163629Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254366#254366">Dominic </a></td></tr>
-<tr d-ix="1"><td>038</td><td>Wolfram Language Mathematica</td><td>190702T161624Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187579#187579">att</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Vyxal</td><td>221109T222711Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254420#254420">emanresu</a></td></tr>
-<tr d-ix="3"><td>011</td><td>Husk</td><td>221108T152943Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254364#254364">Dominic </a></td></tr>
-<tr d-ix="4"><td>069</td><td>Python 3</td><td>190705T010559Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187698#187698">Dat</a></td></tr>
-<tr d-ix="5"><td>099</td><td>Retina 0.8.2</td><td>190701T230358Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187551#187551">Neil</a></td></tr>
-<tr d-ix="6"><td>063</td><td>C# Visual C# Interactive Compiler</td><td>190701T122530Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187526#187526">Expired </a></td></tr>
-<tr d-ix="7"><td>594</td><td>EXAPUNKS 2 EXAs</td><td>190701T183650Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187542#187542">ymbirtt</a></td></tr>
+<tr d-ix="0"><td>030</td><td>EXAPUNKS 594 bytes 2 EXAs</td><td>190701T183650Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187542#187542">ymbirtt</a></td></tr>
+<tr d-ix="1"><td>1785</td><td>Nibbles</td><td>221108T163629Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254366#254366">Dominic </a></td></tr>
+<tr d-ix="2"><td>038</td><td>Wolfram Language Mathematica</td><td>190702T161624Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187579#187579">att</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Vyxal</td><td>221109T222711Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254420#254420">emanresu</a></td></tr>
+<tr d-ix="4"><td>011</td><td>Husk</td><td>221108T152943Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254364#254364">Dominic </a></td></tr>
+<tr d-ix="5"><td>069</td><td>Python 3</td><td>190705T010559Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187698#187698">Dat</a></td></tr>
+<tr d-ix="6"><td>099</td><td>Retina 0.8.2</td><td>190701T230358Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187551#187551">Neil</a></td></tr>
+<tr d-ix="7"><td>063</td><td>C# Visual C# Interactive Compiler</td><td>190701T122530Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187526#187526">Expired </a></td></tr>
 <tr d-ix="8"><td>012</td><td>Stax</td><td>190702T022548Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187553#187553">Khuldrae</a></td></tr>
 <tr d-ix="9"><td>097</td><td>PowerShell</td><td>190701T134830Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187531#187531">Veskah</a></td></tr>
 <tr d-ix="10"><td>059</td><td>Python 3.8 prerelease</td><td>190702T153456Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187574#187574">ovs</a></td></tr>
@@ -61,7 +61,47 @@
 <tr d-ix="32"><td>060</td><td>Python 2</td><td>190701T081417Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187512#187512">TFeld</a></td></tr>
 <tr d-ix="33"><td>017</td><td>Charcoal</td><td>190701T084711Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187513#187513">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>20</s> 17 nibbles (8.5 bytes)</h1>
+<div id="pu0" class="pu"><h1><a href="https://store.steampowered.com/app/716490/EXAPUNKS/" rel="nofollow noreferrer">EXAPUNKS</a> 594 bytes (2 EXAs, 30 Instructions)</h1>
+<p>I've wanted to try a code golf challenge in EXAPUNKS for a while, and you looked like the best fit I could find, so, congrats!</p>
+<p>Input via files 200 and 201, for L and n respectively. Output via a new file. L and the output are in ascending order.</p>
+<p>Basically, XA sums the last n values in L, then sends it to XB. It then seeks to the beginning of L and sends each value one-by-one to XB. XB first receives the total from XA and stores it in register X. It then receives values one-by-one from XA, deducting the new value from X, and writing those values to the output file until X &lt; 0.</p>
+<h3>XA</h3>
+<pre><code>GRAB 201
+SUBI T F T
+DROP
+GRAB 200
+SEEK 9999
+SEEK T
+MARK FIRST_SUM
+ADDI F X X
+ADDI T 1 T
+SEEK -1
+VOID F
+TJMP FIRST_SUM
+COPY X M
+SEEK -9999
+MARK SECOND_SUM
+COPY F M
+TEST EOF
+FJMP SECOND_SUM
+KILL
+</code></pre>
+<h3>XB</h3>
+<pre><code>MAKE
+COPY M X
+MARK LOOP
+COPY M T
+COPY T F
+SUBI X T X
+TEST X &gt; 0
+TJMP LOOP
+SEEK -1
+VOID F
+KILL
+</code></pre>
+<p>JavaScript for the level <a href="https://tio.run/##tVbtbts2FP3vp7gwMMDGKFuSrdjxFgxGsqABvLRog/3xgoCW6YirTKokZaUd@gB7jz3ZXiS7JOXEdpSgRTuLjEXynPtF8jh/0g3VqeKFCTbj@/t@H86lApMxyKlh2sD0jss1/M6VKWl@yUwl1fsfwVO4uIWlTMs1E4YaLgWBFloockY1gw3X3EwgM6aY9PtVVfU@0TQzSgqe6l4q1/2Ntyq81b7lXoiiNHoCs5N5EoYkxh4ldY8TEuF4lNiWYAvJMCQD12Jcd21MEvcMSIxPREISxCQYXBMQJ7H18Lo06GIC82@zZ00dBIxoh2zwZWcbGCNn0hockiAhAVoIotjxR3t8O9vAfwg09FwcBIPQ8aM9fhOqMQNMPiG2MAl59mmw/yK8wVH4mG7SUK7tSnOIITk@PsY@Jsf4PrZbeHREEoza9qHNYWiPC3a7gbg8IoMBTrgCoN8h9jgJm/bp6408exAayuSq0VqVIrW3BW6ZueImZ50u/NUC/ChmSiWgbe@MxkuTyiW7lfmqpw1N37O7NKPilrm786HE24lGdD8aj5Io7C9lgNc2iI8CxdMMF4MFz3NEUK6YDmQlAqqDdZlmQcVobjI7tIxCSmXhg2C8pQQFk@2fWp/3Y31XLkxjuE@hZ6xWCCmeoM@k05f4COpAYTdQwECBarCBgg/UDi2jDhQGvfGWAhgoys0vfwg4zWieMyzPBK4qCbzeDgpaKsOWIMr1gqkg52hhBp0VzzGGMOwCFUtE@WUQDytRFzpVxhTDOa4h@vfvf8TP1gEGJFcw6/Ye9tXJpUTXaLqQWvMFWigUW/E70OXC@7QcWKG4Vhmm7ThGGpojYm0doH03aYeIta8rrpAoYENz3G1MCXz0vYOCc8ENpzn/xK4whLel6Bj/vS39hip4M307/e0dnMDcTc3n311grXB9o6pek21wO2Lq7NrXx9VnhXNksfb1EfusSEYW27S0G8UXCqKz9SLm0eiB@MU@ZD/cc/0dhc7X8OuZhxuyTdVl5Jb8X3vgUvzVvymoomuNx8yft3l9EuGHeqLnr5BnzRB3wJyH19h6im2Y0ig1DieacZG3It01bIBEh3aKnH5k6iaT2sJRp964iVc4rhGpYvh/z6VUa5qfoxB0dijEqgKB84vZrzcXp68vb86mV1Oshbj@Mm74lDvr1tL4oUTxO3UGnlJ9ggTaLwqOLlf/n@DsZujK1TZUYQHbBBICmNkAW3dPlaQ4/ZjmmI7gOmNL9zvwuXV//x8" rel="nofollow noreferrer">here</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>20</s> 17 nibbles (8.5 bytes)</h1>
 <p><em>Edit: -3 nibbles using scan-append <code> `\$:</code> as a more efficient way to generate prefixes</em></p>
 <pre><code>/|\`\&gt;@$:++&lt;_@-~+
 </code></pre>
@@ -86,7 +126,7 @@
                         #   (so, output the first filtered list)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>40</s> 38 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>40</s> 38 bytes</h1>
 <pre><code>Drop@##//.a_/;Tr@a&gt;Tr@Take@##:&gt;Rest@a&amp;
 </code></pre>
 <p><a href="https://tio.run/##dU/LasMwELznNww5jWq9NrZbYnTIB4SSWylFFIeGkjY4vhl/uzNSk4Yeyu4I7c4wu3uMw0d3jMPhPc779bzpv0@hKMryIb6VT7s@xJbPLn527D62z915CHE5b/vD1/BSqHYfQvG6LMO4GEfRGpYwcoUVGNaVpBSmhtdwOS35nDUkh4NlGGgoC@Um2Ak0pSKzt7rKoiTxUAJFXhlSVWZ/jfUPw0I5PcFcvThakNYS/Bs3tb77y30bWjRNQ9Ro@K/TfasVhKYJPo3w6XYiXUe6gnNs5J3o6Akr@u@Baehimi8" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -95,7 +135,7 @@
        //.  /;Tr@a&gt;Tr@Take@##             until suffix sum &lt;= head sum 
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 11 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 11 bytes</h1>
 <pre><code>Ẏ∑£ȯÞK≬∑¥≤∵
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCLhuo7iiJHCo8ivw55L4oms4oiRwqXiiaTiiLUiLCIiLCJbMTAsIDUsIDUsIDNdXG4yIl0=" rel="nofollow noreferrer">Try it Online!</a> Fixed thanks to one of the Sʨɠɠans.</p>
@@ -110,7 +150,7 @@
         ¥   # Register?
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 11 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 11 bytes</h1>
 <pre><code>ḟ(≤Σ↑¹³Σ)ṫ↓
 </code></pre>
 <p><a href="https://tio.run/##yygtzv7v@6ip8f/DHfM1HnUuObf4UdvEQzsPbT63WPPhztWP2ib///8/OtrUwEDHCIgNTaHYyFTHEMg3NwUhUyAy0DEx0DEGIyOgPBhZ6JiCobGOERAa6hjo6Brp6BrH6kQDJcESsbH/jQA" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
@@ -125,7 +165,7 @@
       ²         #   arg2
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>71</s> 69 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>71</s> 69 bytes</h1>
 
 
 
@@ -134,7 +174,7 @@
 
 <p><a href="https://tio.run/##tVRfa4MwEH/3U@SlVJmCf9sqkz2MMQbCPoDzwa3aCW0UY2H79O4uxjbapRuMhdyR3P1y/3JJ89m919Try/il3@eH121OEpNGaZJWWVm3pCIVJW1Od4W@L6ieGBY1qpKw40FP0qi6cTLjNh52Fo0yI@u7gnX3OSsYiUmqERgD56vAtk3iInOCE3MDYChbBwMFSLD3gTxBLiIFbUA9Tg9UfDomAZUFK8vLzJNL97xM/8MTtw7@5pniaXFOEQ1XqY6vR0/cjQ8EcAuNWo4rGVxLBlGjsicnZo@WUGB5tmTOkcwp4eqUsYIQJy9zIJXu2lR4//15VTj2pGiB4hZO6itZASIMQ2TQDyFuN7yJVivwj8ly5vP0fd7RyHj/IAzu0vNQKmqJQfnI3MBW9cYfrf7UlYqiS/XUMk3DD2B8zvgPnJ52xDGJSahJdnW9fT52zbGDBz8iBj0IWN12xRb@DS6ZYIXqLBsw9agvdXQwCCv2CDAQjtpYssURTVvRTl8mZDYismBLshABCBT9HkQnoIePpniDCEefAjSPV6BFWnOT9SXyiUE6PPw7GTmkOEFaF2Np9F8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 99 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 99 bytes</h1>
 
 <pre><code>\d+
 $*
@@ -216,7 +256,7 @@ $.1,
 
 <p>Delete the trailing comma that came before <code>n</code>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="http://www.mono-project.com/docs/about-mono/releases/5.0.0/#csc" rel="nofollow noreferrer">C# (Visual C# Interactive Compiler)</a>, <s>88</s> <s>81</s> <s>69</s> <s>68</s> 63 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="http://www.mono-project.com/docs/about-mono/releases/5.0.0/#csc" rel="nofollow noreferrer">C# (Visual C# Interactive Compiler)</a>, <s>88</s> <s>81</s> <s>69</s> <s>68</s> 63 bytes</h1>
 
 <p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/68917/liefdewen">LiefdeWen</a></em>
 </p>
@@ -225,54 +265,6 @@ $.1,
 </code></pre>
 
 <p><a href="https://tio.run/##lU9Na8MwDL3nV5ieZKYYx5nZoIlvLXT01kIPYwcnuJvo6o580MHYb89Usw22W9ET6OnB01Pb521P03KMbbWmfqgoDg4T5QlXizgeQ@eb15AU58S@nnztmtp5tTnQGzRS7V5CFwDekeTvmm5Y2IxHkJVXW38I8MPlNM/@@woStdgDxHAWj08fVms03IX9bmOxYH5nL7AMjbcaywTDesI92lQlGq4CNeYG8/JTqu3p8hufBiPn2a6jIawpBuiHjuKzejhRhBnOOD/LWfY3DDsn1yt9pi8" rel="nofollow noreferrer" title="C# (Visual C# Interactive Compiler) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://store.steampowered.com/app/716490/EXAPUNKS/" rel="noreferrer">EXAPUNKS</a> (2 EXAs, 30 Instructions, 594-byte solution file)</h1>
-
-<p>I've wanted to try a code golf challenge in EXAPUNKS for a while, and you looked like the best fit I could find, so, congrats!</p>
-
-<p>Input via files 200 and 201, for L and n respectively. Output via a new file. L and the output are in ascending order.</p>
-
-<p>Basically, XA sums the last n values in L, then sends it to XB. It then seeks to the beginning of L and sends each value one-by-one to XB. XB first receives the total from XA and stores it in register X. It then receives values one-by-one from XA, deducting the new value from X, and writing those values to the output file until X &lt; 0.</p>
-
-<h3>XA</h3>
-
-<pre><code>GRAB 201
-SUBI T F T
-DROP
-GRAB 200
-SEEK 9999
-SEEK T
-MARK FIRST_SUM
-ADDI F X X
-ADDI T 1 T
-SEEK -1
-VOID F
-TJMP FIRST_SUM
-COPY X M
-SEEK -9999
-MARK SECOND_SUM
-COPY F M
-TEST EOF
-FJMP SECOND_SUM
-KILL
-</code></pre>
-
-<h3>XB</h3>
-
-<pre><code>MAKE
-COPY M X
-MARK LOOP
-COPY M T
-COPY T F
-SUBI X T X
-TEST X &gt; 0
-TJMP LOOP
-SEEK -1
-VOID F
-KILL
-</code></pre>
-
-<p>JavaScript for the level <a href="https://tio.run/##tVbtbts2FP3vp7gwMMDGKFuSrdjxFgxGsqABvLRog/3xgoCW6YirTKokZaUd@gB7jz3ZXiS7JOXEdpSgRTuLjEXynPtF8jh/0g3VqeKFCTbj@/t@H86lApMxyKlh2sD0jss1/M6VKWl@yUwl1fsfwVO4uIWlTMs1E4YaLgWBFloockY1gw3X3EwgM6aY9PtVVfU@0TQzSgqe6l4q1/2Ntyq81b7lXoiiNHoCs5N5EoYkxh4ldY8TEuF4lNiWYAvJMCQD12Jcd21MEvcMSIxPREISxCQYXBMQJ7H18Lo06GIC82@zZ00dBIxoh2zwZWcbGCNn0hockiAhAVoIotjxR3t8O9vAfwg09FwcBIPQ8aM9fhOqMQNMPiG2MAl59mmw/yK8wVH4mG7SUK7tSnOIITk@PsY@Jsf4PrZbeHREEoza9qHNYWiPC3a7gbg8IoMBTrgCoN8h9jgJm/bp6408exAayuSq0VqVIrW3BW6ZueImZ50u/NUC/ChmSiWgbe@MxkuTyiW7lfmqpw1N37O7NKPilrm786HE24lGdD8aj5Io7C9lgNc2iI8CxdMMF4MFz3NEUK6YDmQlAqqDdZlmQcVobjI7tIxCSmXhg2C8pQQFk@2fWp/3Y31XLkxjuE@hZ6xWCCmeoM@k05f4COpAYTdQwECBarCBgg/UDi2jDhQGvfGWAhgoys0vfwg4zWieMyzPBK4qCbzeDgpaKsOWIMr1gqkg52hhBp0VzzGGMOwCFUtE@WUQDytRFzpVxhTDOa4h@vfvf8TP1gEGJFcw6/Ye9tXJpUTXaLqQWvMFWigUW/E70OXC@7QcWKG4Vhmm7ThGGpojYm0doH03aYeIta8rrpAoYENz3G1MCXz0vYOCc8ENpzn/xK4whLel6Bj/vS39hip4M307/e0dnMDcTc3n311grXB9o6pek21wO2Lq7NrXx9VnhXNksfb1EfusSEYW27S0G8UXCqKz9SLm0eiB@MU@ZD/cc/0dhc7X8OuZhxuyTdVl5Jb8X3vgUvzVvymoomuNx8yft3l9EuGHeqLnr5BnzRB3wJyH19h6im2Y0ig1DieacZG3It01bIBEh3aKnH5k6iaT2sJRp964iVc4rhGpYvh/z6VUa5qfoxB0dijEqgKB84vZrzcXp68vb86mV1Oshbj@Mm74lDvr1tL4oUTxO3UGnlJ9ggTaLwqOLlf/n@DsZujK1TZUYQHbBBICmNkAW3dPlaQ4/ZjmmI7gOmNL9zvwuXV//x8" rel="noreferrer">here</a></p>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 12 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 
