--- a/q/274690.html
+++ b/q/274690.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>Wolfram Language Mathematica</td><td>240816T130445Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/275013#275013">att</a></td></tr>
+<tr d-ix="0"><td>030</td><td>Wolfram Language Mathematica</td><td>240816T130445Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/275013#275013">att</a></td></tr>
 <tr d-ix="1"><td>108</td><td>Go</td><td>240812T134950Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274922#274922">bigyihsu</a></td></tr>
 <tr d-ix="2"><td>005</td><td>MathGolf</td><td>240812T122351Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274916#274916">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>006</td><td>05AB1E</td><td>240812T122020Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274915#274915">Kevin Cr</a></td></tr>
@@ -69,11 +69,12 @@
 <tr d-ix="40"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="41"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 31 bytes</h1>
-<pre><code>ToString/@#&lt;&gt;$&amp;/@({#.#^2}#)&amp;
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>31</s> 30 bytes</h1>
+<p>boring wins</p>
+<pre><code>s[#.#^2]==s/@#&lt;&gt;&quot;&quot;&amp;
+s=ToString
 </code></pre>
-<p><a href="https://tio.run/##PY1NCsIwEIX3vUakKIw2P02agpYeQag7UQil1S5aQbIL6SE8ghf0CDGJUhiGb3hv3huVvnej0kOrXH9wp0ejn8N0y2q0r1ZpVq8N2qErtZ/XG21Sd/SiPqNt1dfoks5Nq6bZJIYAB2YhMRQokEg5YCgCEOwJL0Sizbsk8DJwKYH6@XmFAI4xMBYzpBc4k5AX1J@hhsI/nIMIIJbs5TOPBTh0@W0T674" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<p>Returns <code>True</code> if the sum of cubes is the concatenation, and non<code>True</code> otherwise.</p>
+<p><a href="https://tio.run/##PY3NCoMwEITvPoYBT9s2PyZGaMRHaLE3sRBEWw9aqOlJ9NXTJC3CsnzDzs6M2jy7UZuh1bZXdq7REd1po9R8KtG5iOMkmtXtVZn3MD3s9TN0prw4NjU6FH2JmmSrWj1tS7QQ4MBWiBYKFEigFDBkHgh2hHciweZcEnjuOZdA3fy8QgDHGBgLGdIdOJOQZtRJX0PhH85BeBB79v6ZhgLsu9xeo9V@AQ" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 108 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;fmt&quot;
