--- a/q/183390.html
+++ b/q/183390.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
-<tr d-ix="1"><td>043</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
+<tr d-ix="0"><td>042</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
+<tr d-ix="1"><td>007</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
 <tr d-ix="2"><td>008</td><td>Jelly</td><td>201030T113958Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/214421#214421">ais523</a></td></tr>
 <tr d-ix="3"><td>118</td><td>TSQL</td><td>190418T035042Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183428#183428">t-clause</a></td></tr>
 <tr d-ix="4"><td>047</td><td>J</td><td>190419T045248Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183477#183477">Jonah</a></td></tr>
@@ -48,7 +48,13 @@
 <tr d-ix="19"><td>019</td><td>Pyth</td><td>190417T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183391#183391">Sok</a></td></tr>
 <tr d-ix="20"><td>144</td><td>Wolfram Language Mathematica</td><td>190417T143335Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183395#183395">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> <s>9</s> 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> <s>43</s> 42 bytes</h1>
+<pre><code>{}⋃Subsets[#][[2;;,;;;;2]]~MaximalBy~Tr&amp;
+</code></pre>
+<p><a href="https://tio.run/##JU/LCsIwELz3NwQPsotJ@rClFIp3QdBb6SFKiwXroY2glPbi0b/0R@Jukk3CZLIzk/Ta3Jpem@6qbVvYaf59P6fnZWzMWK3qqlJ5DjkNVdfLQb@6Xt/37@U8rK1pRjMWUzBJUBACSsCQUDxDMEUQQwQhw5igFDR5@Vsp3A5UDEi2o25UEHnenzxW7IrslwDumEvJCUMJgipS1K0S58K6FJCCiXcJhFGmzoAe51OF92M5ZhmHijmYg@PQPUy5abel@5b9Aw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/214421/81203">ais523's Jelly solution</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> <s>9</s> 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p><s>Ever have one of those challenges where you completely forget how to golf?!</s><br><strong><em>Much</em></strong> better :D</p>
 <pre><code>à có ñx
 </code></pre>
@@ -62,16 +68,10 @@
             :Implicit out put of last sub-array
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> 43 bytes</h1>
-<pre><code>Union@Subsets[#][[2;;,;;;;2]]~MaximalBy~Tr&amp;
-</code></pre>
-<p><a href="https://tio.run/##JU/LCsIwELz3NwQPsotJ@rClFIp3QVBPpYcoLQZshTaCUtpfr7tJNgmTyc5M0mn7bDptzUOvbbHeevPuy8vnPjZ2rDZ1Vak8h5yGquvlpL@m06/jb7kO29U2ox2LKZgkKAgBJWBIKJ4hmCKIIYKQYUxQCpq8/K0UbgcqBiQ7UDcqiDzvTx4rdkX2SwAPzKXkhKEEQRUp6laJc2FdCkjBxLsEwihTZ0CP86nC@7Ecs4xDxRzMwXkwvS137b5031r/" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/214421/81203">ais523's Jelly solution</a>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>ŒPm€2SÞṪ
 </code></pre>
-<p><a href="https://tio.run/##y0rNyan8///opIDcR01rjIIPz3u4c9X///@jDXWMdIx1dA11dI2BLNNYAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y0rNyan8///opIDcR01rjIIPz3u4c9X///@jDXWMdIx1dA11dI2BLNNYAA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>This is a function submission (it's almost usable as a full program, which is what the TIO link does, but the output format is a little weird; when used as a function, though, it just outputs the list of elements from the subsequence).</p>
 <h2>Explanation</h2>
 <p>I found a much terser algorithm (loosely inspired by my previous Brachylog answer), saving 6 bytes over the Jelly and Brachylog answers and 3 bytes over the current leading answer.</p>
