--- a/q/210454.html
+++ b/q/210454.html
@@ -43,7 +43,7 @@
 </code></pre>
 <p><a href="https://tio.run/##LY3BasIwGIDvfQpNoShJptWjVCJjY7mJHexQKvymqY02TYjZYbh5duAT7PH6Ip1uXr6P7/Rp8JXU4JWArky6pVONZ4ylFtxBLpyDj0wlNhnPLE1WkutsEGM@5GvaXs6T9vyjMG4v36MHjuNPTmM653k0YiGeKDoPyVQR1EN51JXssQIHwkt3YE@iMllIECKvJvXX4/ZavLHv/tk4nUd5dEoFNKdjgGAjClluK7Xb17oxFpEAvci6Nr034@qif2v4w@af4q7iZhR8db8" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input a list of characters.</p>
-<p>The direction of the (1-indexed) <code>i</code>th character relative to the previous character can be computed with <span class="math-container">\$\Big\lceil2\sqrt i\Big\rceil\bmod 4\$</span>:</p>
+<p>The direction of the (1-indexed) <span class="math-container">\$i\$</span>th character relative to the previous character can be computed with <span class="math-container">\$\Big\lceil2\sqrt i\Big\rceil\bmod 4\$</span>:</p>
 <ul>
 <li>1: ↗</li>
 <li>2: ↘</li>
