--- a/q/274690.html
+++ b/q/274690.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>AWK</td><td>240816T165950Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/275017#275017">C K</a></td></tr>
+<tr d-ix="0"><td>021</td><td>AWK</td><td>240816T165950Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/275017#275017">C K</a></td></tr>
 <tr d-ix="1"><td>005</td><td>Japt</td><td>240805T213825Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274715#274715">Shaggy</a></td></tr>
 <tr d-ix="2"><td>030</td><td>Wolfram Language Mathematica</td><td>240816T130445Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/275013#275013">att</a></td></tr>
 <tr d-ix="3"><td>108</td><td>Go</td><td>240812T134950Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274922#274922">bigyihsu</a></td></tr>
@@ -70,11 +70,11 @@
 <tr d-ix="41"><td>016</td><td>APL Dyalog Unicode</td><td>240805T110728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274693#274693">Ad&#225;</a></td></tr>
 <tr d-ix="42"><td>006</td><td>Vyxal</td><td>240805T110401Z</td><td><a href="https://codegolf.stackexchange.com/questions/274690/cubic-concatenation/274691#274691">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, 24 bytes</h1>
-<pre><code>$0=$1$2$3~$1^3+$2^3+$3^3
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gawk/manual/gawk.html" rel="nofollow noreferrer">AWK</a>, <s>24</s> 21 bytes</h1>
+<pre><code>$1$2$3~$1^3+$2^3+$3^3
 </code></pre>
-<p><a href="https://tio.run/##SyzP/v9fxcBWxVDFSMW4TsUwzlhbxQhEGMcZ//9vqGCqYAwA" rel="nofollow noreferrer" title="AWK – Try It Online">Try it online!</a></p>
-<p>This will print a '1' if true, and return nothing if false.</p>
+<p><a href="https://tio.run/##SyzP/v9fxVDFSMW4TsUwzlhbxQhEGMcZ//9vqGCqYAwA" rel="nofollow noreferrer" title="AWK – Try It Online">Try it online!</a></p>
+<p>Prints the digits if true, or returns nothing.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>x³¥U¬
