--- a/q/273875.html
+++ b/q/273875.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>JavaScript Node.js</td><td>240714T232756Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/274160#274160">Andrew B</a></td></tr>
-<tr d-ix="1"><td>055</td><td>Haskell</td><td>240705T151856Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273944#273944">DPD-</a></td></tr>
-<tr d-ix="2"><td>022</td><td>Haskell + hgl</td><td>240707T133716Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273986#273986">Wheat Wi</a></td></tr>
-<tr d-ix="3"><td>010</td><td>Pip p</td><td>240707T025922Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273975#273975">Aiden Ch</a></td></tr>
-<tr d-ix="4"><td>036</td><td>Julia 1.0</td><td>240706T125129Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273963#273963">MarcMush</a></td></tr>
-<tr d-ix="5"><td>nan</td><td></td><td>240705T093913Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273936#273936">Saurabh </a></td></tr>
+<tr d-ix="0"><td>046</td><td>tinylisp 2</td><td>240816T190028Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/275018#275018">DLosc</a></td></tr>
+<tr d-ix="1"><td>044</td><td>JavaScript Node.js</td><td>240714T232756Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/274160#274160">Andrew B</a></td></tr>
+<tr d-ix="2"><td>055</td><td>Haskell</td><td>240705T151856Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273944#273944">DPD-</a></td></tr>
+<tr d-ix="3"><td>022</td><td>Haskell + hgl</td><td>240707T133716Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273986#273986">Wheat Wi</a></td></tr>
+<tr d-ix="4"><td>010</td><td>Pip p</td><td>240707T025922Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273975#273975">Aiden Ch</a></td></tr>
+<tr d-ix="5"><td>036</td><td>Julia 1.0</td><td>240706T125129Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273963#273963">MarcMush</a></td></tr>
 <tr d-ix="6"><td>037</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
 <tr d-ix="7"><td>012</td><td>APL Dyalog Extended</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 <tr d-ix="8"><td>1785</td><td>Nibbles</td><td>240704T155522Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273923#273923">Dominic </a></td></tr>
@@ -66,13 +66,31 @@
 <tr d-ix="37"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
 <tr d-ix="38"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 44 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/dloscutoff/tinylisp2" rel="nofollow noreferrer">tinylisp 2</a>, 46 bytes</h1>
+
+<pre class="lang-lisp prettyprint-override"><code>(d F(\(S(I 1))(? S(c(] I S)(F([ I S)(* I 2)))(
+</code></pre>
+<p><a href="https://dloscutoff.github.io/do-stuff-online/#@WyJ0aW55bGlzcDIiLCIiLCIoZCBGKFxcKFMoSSAxKSkoPyBTKGMoXSBJIFMpKEYoWyBJIFMpKCogSSAyKSkpKCIsIihGIFwiYWJjZGVmZ2hpamtsbW5vXCIpIiwiIiwiIl0=" rel="nofollow noreferrer">Try It Online!</a></p>
+<h3>Ungolfed &amp; commented</h3>
+<pre class="lang-lisp prettyprint-override"><code>(def segments
+ (lambda        ; Function
+  (S (I 1))     ; Takes two args: a string, and a number defaulting to 1
+  (if S         ; If the string is nonempty:
+   (cons        ;  Prepend
+    (take I S)  ;  the first I characters of S
+    (segments   ;  to the result of a recursive call on
+     (drop I S) ;   All but the first I characters of S
+     (* I 2)))  ;   I times 2
+   nil)))       ; Else, empty list
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 44 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;[...x].reduce((a,c,i)=&gt;i&amp;++i?a+c:a+' '+c)
 </code></pre>
 <p><a href="https://tio.run/##bcoxDsIwDADAnVegDjSRix@AlPIQxGAcp7iEGLW06u8DO6ynG2mlmSd9vY/FotQU6hb6CyJuV5wkLizOUced@tDrAUDPBHwiaPctsK9sZbYsmG1wyTV04yhpuOv4yM9ijfe73/FPv1Y/" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://play.haskell.org/saved/kMH1lMjw" rel="nofollow noreferrer">61</a></s> <s><a href="https://play.haskell.org/saved/rJGb9Uxq" rel="nofollow noreferrer">58</a></s> <s><a href="https://play.haskell.org/saved/OU4L4Suf" rel="nofollow noreferrer">56</a></s> 55 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://play.haskell.org/saved/kMH1lMjw" rel="nofollow noreferrer">61</a></s> <s><a href="https://play.haskell.org/saved/rJGb9Uxq" rel="nofollow noreferrer">58</a></s> <s><a href="https://play.haskell.org/saved/OU4L4Suf" rel="nofollow noreferrer">56</a></s> 55 bytes</h1>
 <ul>
 <li>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/56656/wheat-wizard">Wheat Wizard
 ♦</a></li>
@@ -82,7 +100,7 @@
 <p><a href="https://play.haskell.org/saved/kGhaqjvz" rel="nofollow noreferrer">Try it online!</a></p>
 <p>It maps (with state) over the infinite sequence of powers of two. Each map step returns the first n characters of the string in the state and puts the remaining in the state. So giving as initial state the string and stop iterating when the result is the empty string, we obtain the result.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 22 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 22 bytes</h1>
 <p><em>This answer was written jointly with <a href="https://codegolf.stackexchange.com/users/20059/0">0 '</a></em></p>
 <pre><code>cr&lt;&lt;&lt;gB(l&lt;bi&lt;st)&lt;zp nN
 </code></pre>
@@ -125,36 +143,18 @@
 <pre><code>he&lt;pST(apa$eq&lt;db.*l)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-p</code>, 10 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-p</code>, 10 bytes</h1>
 <pre><code>a^@--E\,#a
 </code></pre>
 <p>I feel there could be 1 or 2 bytes improvement but I don't see it at the moment.</p>
 <p><a href="https://ato.pxeger.com/run?1=m724ILNgWbSSboFS7IKlpSVpuharEuMcdHVdY3SUEyECUPHN0UqJSckpqWnpGZlZ2Tm5eflwLQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 36 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 36 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>!s=keys(s).|&gt;k-&gt;show(s[2^~-k:~-2^k])
 </code></pre>
 <p><a href="https://tio.run/##yyrNyUw0rPj/X7HYNju1slijWFOvxi5b1644I79cozjaKK5ON9uqTtcoLjtW87@iUmJSckpqWnpGZlZ2Tm5evtJ/AA" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 <p>Ends with an <a href="https://codegolf.meta.stackexchange.com/q/4780">error</a>. Substrings are printed in quotes. Cleaner output with <code>println</code> instead of <code>show</code> (+3 bytes)</p>
-</div>
-<div id="pu5" class="pu"><p>Here's a short solution in Python for your problem:</p>
-<pre class="lang-php prettyprint-override"><code>s=input()
-i=1
-while s:
-    print(s[:i])
-    s=s[i:]
-    i*=2
-</code></pre>
-<p><strong>Explanation:</strong></p>
-<ol>
-<li>s=input(): Reads the input string.</li>
-<li>i=1: Initializes the segment length to 1.</li>
-<li>while s:: Loops while there are characters left in the string.</li>
-<li>print(s[:i]): Prints the first i characters of the string.</li>
-<li>s=s[i:]: Updates the string by removing the first i characters.</li>
-<li>i*=2: Doubles the segment length for the next iteration.</li>
-</ol>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>55</s> <s>53</s>  <s>47</s> <a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN3XTbHXtinXKbKNjdRJtDauLFezTooujE_X0YnXKbGyKo_X09BKBUlpGsVZltRBNuwpKS4oV0qKVEpOSU1LT0jMys7JzcvPylWK5IApgpgMA" rel="nofollow noreferrer"><s>45</s></a> 37 bytes</h1>
 <ul>
@@ -372,10 +372,10 @@ h         # Push the length of the (implicit) input-string
           # (after which the entire stack is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu19" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 5 bytes</h1>
+<div id="pu19" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="noreferrer">Husk</a>, 5 bytes</h1>
 <pre><code>C:1İ2
 </code></pre>
-<p><a href="https://tio.run/##yygtzv7/39nK8MgGo////ycmJaekpqVnZGZl5@Tm5QMA" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##yygtzv7/39nK8MgGo////ycmJaekpqVnZGZl5@Tm5QMA" rel="noreferrer" title="Husk – Try It Online">Try it online!</a></p>
 <pre><code>C       # cut input into chunks with lengths:
  :1     # prepend 1 to
    İ2   # infinite sequence of powers of 2
