--- a/q/63834.html
+++ b/q/63834.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>JavaScript Node.js</td><td>240813T212004Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274963#274963">Andrew B</a></td></tr>
-<tr d-ix="1"><td>029</td><td>Bash</td><td>240813T141750Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274957#274957">wobtax</a></td></tr>
-<tr d-ix="2"><td>045</td><td>Rust</td><td>240813T002412Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274947#274947">bzr</a></td></tr>
+<tr d-ix="0"><td>043</td><td>Rust</td><td>240813T002412Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274947#274947">bzr</a></td></tr>
+<tr d-ix="1"><td>031</td><td>JavaScript Node.js</td><td>240813T212004Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274963#274963">Andrew B</a></td></tr>
+<tr d-ix="2"><td>029</td><td>Bash</td><td>240813T141750Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274957#274957">wobtax</a></td></tr>
 <tr d-ix="3"><td>111</td><td>Setanta</td><td>240813T032403Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274949#274949">bb94</a></td></tr>
 <tr d-ix="4"><td>029</td><td>Octave</td><td>240416T121334Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/272621#272621">cnln</a></td></tr>
 <tr d-ix="5"><td>083</td><td>Acc!!</td><td>240415T105545Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/272597#272597">Mukundan</a></td></tr>
@@ -257,21 +257,21 @@
 <tr d-ix="228"><td>005</td><td>Labyrinth</td><td>151114T130143Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/63839#63839">Sp3000</a></td></tr>
 <tr d-ix="229"><td>004</td><td>Pyth</td><td>151114T124725Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/63835#63835">Jakube</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>46</s> <s>45</s> 43 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>let f=||(1..).for_each(|x|print!(&quot;{x}\n&quot;));
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN7VzUksU0mxrajQM9fQ09dLyi-JTE5MzNGoqagqKMvNKFDWUqitqY_KUNDWtIVqgOmEmAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(n=1n;;n++)console.log(n+'')
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/Lb9II8/WMM/aOk9bWzM5P684PydVLyc/XSNPW11d8/9/AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/manual/bash.html" rel="nofollow noreferrer">Bash</a>, 29 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/manual/bash.html" rel="nofollow noreferrer">Bash</a>, 29 bytes</h1>
 <p><code>while echo $((++n));do :;done</code></p>
 <p><strong>Explanation:</strong> repeatedly increment <code>n</code> (from 0), then print it. This always succeeds, so the loop condition is always true.</p>
 <p>Note that this has side-effects. If you cancel the program, <code>n</code> will still be set in the current shell, so it will continue where it left off. You can reset by running <code>unset n</code> first.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>46</s> 45 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>fn main(){(1..).for_each(|x|println!(&quot;{x}&quot;))}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN3XT8hRyEzPzNDSrNQz19DT10vKL4lMTkzM0aipqCooy80py8hQ1lKorapU0NWshmqB6YWYAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 111 bytes</h1>
 <pre><code>t:=[0]*40nuair-a 1{i:=39nuair-a!t[i]{i-=1t[i]=(t[i]+1)%10}i=0nuair-a!t[i] i+=1scriobh(nasc@(cuid@t(i,39))(&quot;&quot;))}
