--- a/q/63834.html
+++ b/q/63834.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>Rust</td><td>240813T002412Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274947#274947">bzr</a></td></tr>
+<tr d-ix="0"><td>040</td><td>Rust</td><td>240813T002412Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274947#274947">bzr</a></td></tr>
 <tr d-ix="1"><td>031</td><td>JavaScript Node.js</td><td>240813T212004Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274963#274963">Andrew B</a></td></tr>
 <tr d-ix="2"><td>029</td><td>Bash</td><td>240813T141750Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274957#274957">wobtax</a></td></tr>
 <tr d-ix="3"><td>111</td><td>Setanta</td><td>240813T032403Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274949#274949">bb94</a></td></tr>
@@ -257,10 +257,10 @@
 <tr d-ix="228"><td>005</td><td>Labyrinth</td><td>151114T130143Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/63839#63839">Sp3000</a></td></tr>
 <tr d-ix="229"><td>004</td><td>Pyth</td><td>151114T124725Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/63835#63835">Jakube</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>46</s> <s>45</s> 43 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>let f=||(1..).for_each(|x|print!(&quot;{x}\n&quot;));
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>46</s> <s>45</s> 40 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>fn main(){for x in 1..{println!(&quot;{x}&quot;)}}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN7VzUksU0mxrajQM9fQ09dLyi-JTE5MzNGoqagqKMvNKFDWUqitqY_KUNDWtIVqgOmEmAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWNzXS8hRyEzPzNDSr0_KLFCoUMvMUDPX0qguKMvNKcvIUNZSqK2qVNGtrIeqh2mDaAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
 
